# src/main/java/dk/kb/discover/api/v1/impl/DsDiscoverApiServiceImpl.java
@@ -197,7 +197,7 @@ public class DsDiscoverApiServiceImpl implements DsDiscoverApi {
       * @implNote return will always produce a HTTP 200 code. Throw ServiceException if you need to return other codes
      */
     @Override
-    public String solrSearch(String collection, String q, List<String> fq, Integer rows, String fl, String facet, List<String> facetField, String qOp, String wt, String version, String indent, String debug, String debugExplainStructured) {
+    public String solrSearch(String collection, String q, List<String> fq, Integer rows, Integer start, String fl, String facet, List<String> facetField, String qOp, String wt, String version, String indent, String debug, String debugExplainStructured) {
         Map<String, String[]> extra = getExtraParams();
         if (!extra.isEmpty()) {
             throw new InvalidArgumentServiceException("Unsupported parameters: " + extra.keySet());
@@ -206,7 +206,7 @@ public class DsDiscoverApiServiceImpl implements DsDiscoverApi {
         try {
             // TODO: Pass the map of request parameters instead of all parameters as first class
             httpServletResponse.setContentType(solr.getResponseMIMEType(wt)); // Needed by SolrJ
-            return solr.query(q, fq, rows, fl, facet, facetField, qOp, wt, version, indent, debug, debugExplainStructured);
+            return solr.query(q, fq, rows, start, fl, facet, facetField, qOp, wt, version, indent, debug, debugExplainStructured);
         } catch (Exception e){
             throw handleException(e);
         }
